[gd_scene load_steps=9 format=3 uid="uid://cufj4ikb0grdl"]

[ext_resource type="Texture2D" uid="uid://d3les0mlqncrc" path="res://Assests/kenney_pixel-platformer/Tiles/Characters/tile_0000.png" id="1_q0axm"]
[ext_resource type="Script" path="res://Scripts/Enemies/enemy.gd" id="1_tmp6c"]
[ext_resource type="AudioStream" uid="uid://brgdfh2lxqiio" path="res://Assests/audio/kill-enemy.ogg" id="2_67dul"]
[ext_resource type="Texture2D" uid="uid://ttg35d2pmifj" path="res://Assests/kenney_pixel-platformer/Tiles/Characters/tile_0001.png" id="2_rawvl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j4n52"]
height = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ioa2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_q0axm")
}, {
"duration": 1.0,
"texture": ExtResource("2_rawvl")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43iq8"]
size = Vector2(18, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xvve"]
size = Vector2(22, 18)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_tmp6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_j4n52")

[node name="CliffCheck" type="RayCast2D" parent="."]
position = Vector2(-11, 0)
target_position = Vector2(0, 16)

[node name="WallCheck" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(5.68248e-07, 13)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ioa2t")
animation = &"run"
autoplay = "run"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_67dul")
max_distance = 20000.0

[node name="head_damage" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="head_damage"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_43iq8")

[node name="player_damage" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_damage"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_8xvve")

[connection signal="finished" from="death" to="." method="_on_death_finished"]
[connection signal="body_entered" from="head_damage" to="." method="_on_head_damage_body_entered"]
[connection signal="body_entered" from="player_damage" to="." method="_on_player_damage_body_entered"]
